Fixing typo where I wrote OpenBLAS instead of FFTW

--- a/FFTW/OpenShift/templates/nfd/instruction_sets/avx/fftw-nfd-buildconfig-rhel8.yaml
+++ b/FFTW/OpenShift/templates/nfd/instruction_sets/avx/fftw-nfd-buildconfig-rhel8.yaml
@@ -2,7 +2,7 @@ apiVersion: "v1"
 kind: "Template"
 metadata:
   annotations:
-    description: "Template to make OpenBLAS AVX build image"
+    description: "Template to make an FFTW AVX build image"
     tags: "fftw-nfd-avx-build-image-rhel8"
   name: "fftw-nfd-avx-build-image-rhel8"
 objects:
