--- a/TensorFlow/playbooks/package_installation/play.yaml
+++ b/TensorFlow/playbooks/package_installation/play.yaml
@@ -81,9 +81,14 @@
     when: RHEL_VERSION == '8'
 
   # Install TensorFlow requirements
-  - name: Install wheel for building the to-be-generated TensorFlow pip package
+  - name: Install requirements for building the to-be-generated TensorFlow pip package
     pip:
-      name: wheel
+      name:
+        - keras_applications
+        - keras_preprocessing
+        - mock
+        - six 
+        - wheel
 
   - name: Install remaining TensorFlow requirements
     yum:
