--- a/TensorFlow/playbooks/TensorFlow_installation/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/play.yaml
@@ -6,9 +6,8 @@
   # Set global vars
   vars:
     RHEL_VERSION: '{{ rhel_version | default("7") }}'
-    BAZEL_VERSION: '{{ bazel_version | default("0.25.2") }}'
-    TENSORFLOW_VERSION: '{{ tf_version | default("v1.14.0") }}'
-    NUMPY_VERSION: '{{ np_version | default("v1.16.4") }}'
+    TENSORFLOW_VERSION: '{{ tf_version | default("1.14.0") }}'
+    NUMPY_VERSION: '{{ np_version | default("1.16.4") }}'
     USE_FFTW: '{{ use_fftw | default("yes") }}'
     USE_OPENBLAS: '{{ use_openblas | default("no") }}'
     USE_CPU: '{{ use_cpu | default("yes") }}'
@@ -20,9 +19,6 @@
 
     # Gets NumPy and TensorFlow sources
     - role: get
-
-    # Installs Bazel
-    - role: install_bazel
 
     # Builds NumPy
     - role: build_numpy
