Executable needs to be 'pip3', not the default pip2

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_tensorflow/tasks/main.yaml
@@ -3,3 +3,4 @@
 - name: Install TensorFlow
   pip:
     name: 'file:///tmp/tensorflow_pkg/tensorflow-{{ TENSORFLOW_VERSION }}-{{ TENSORFLOW_VERSION }}.whl'
+    executable: pip3
