All the repos are missing in the latest rhscl s2i image (possible bug?), so reverting to tag '1-66'

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/rhscl/s2i-core-rhel7
+FROM registry.access.redhat.com/rhscl/s2i-core-rhel7:1-66
 MAINTAINER Courtney Pacheco <cpacheco@redhat.com>
 ENV LANG=en_US.utf8
 USER root
