--- a/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
@@ -1,7 +1,7 @@
 ---
 
 # Install NumPy requirements
-- name: Install NumPy requirements for RHEL 7
+- name: Install NumPy requirements for RHEL 7 (for non-UBI and non-s2i images only)
   yum:
     name:
       - atlas
@@ -16,9 +16,22 @@
       - gcc-gfortran
       - lapack
       - make
-  when: RHEL_VERSION == '7'
+  when: RHEL_VERSION == '7' and USE_S2I == 'no'
 
-- name: Install NumPy requirements for RHEL 8
+- name: Install NumPy requirements for RHEL 7 (for UBI and s2i images only)
+  yum:
+    name:
+      - atlas
+      - atlas-devel
+      - cpp
+      - Cython
+      - gcc
+      - gcc-c++
+      - gcc-gfortran
+      - make
+  when: RHEL_VERSION == '7' and USE_S2I == 'yes'
+
+- name: Install NumPy requirements for RHEL 8 (for non-UBI and non-s2i images only)
   dnf:
     name:
       - atlas
@@ -32,5 +45,18 @@
       - gcc-c++
       - gcc-gfortran
       - lapack
+      - make
+  when: RHEL_VERSION == '8'
+
+- name: Install NumPy requirements for RHEL 8 (for UBI and s2i images only)
+  dnf:
+    name:
+      - atlas
+      - atlas-devel
+      - cpp
+      - Cython
+      - gcc
+      - gcc-c++
+      - gcc-gfortran
       - make
   when: RHEL_VERSION == '8'
