Cythonize was using py2, not py3. The new Cython requires 'language_level' to be set, which we can do with the '-3' option

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -1,5 +1,11 @@
 ---
 
+- name: Specify to use Cython 3 with 'cythonize'
+  lineinfile:
+    path: '{{ NUMPY_BUILD_DIR }}/tools/cythonize.py'
+    regexp: "\[\'cython\'\]\ \+\ flags\ \+\ \[\"\-o\"\, tofile\, fromfile\]\)"
+    line: "['cython -3'] + flags + [\"-o\", tofile, fromfile])"
+
 - name: Remove existing numpy site config file
   file:
     state: absent
