Adding PYTHONPATH environment variable because NumPy needs it defined when installing to a non-standard directory

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
@@ -4,3 +4,5 @@
   shell: |
     cd {{ NUMPY_BUILD_DIR }}
     python3 setup.py install --prefix={{ NUMPY_INSTALL_DIR }}
+  environment:
+    PYTHONPATH: '{{ PYTHONPATH }}'
