Saving BLAS, CBLAS, and LAPACK to /usr/lib instead of /usr/lib64. Also telling NumPy where to find these libraries.

--- a/TensorFlow/playbooks/package_installation/roles/cblas/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cblas/tasks/main.yaml
@@ -76,4 +76,4 @@
 
 # Finally, move the shared object library to /usr/lib64 so it can be found by NumPy
 - name: Move libcblas.so to /usr/lib64
-  command: 'mv {{ CBLAS_BUILD_DIR }}/lib/libcblas.so /usr/lib64/libcblas.so'
+  command: 'mv {{ CBLAS_BUILD_DIR }}/lib/libcblas.so /usr/lib/libcblas.so'
