--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -28,6 +28,8 @@
   shell: |
     cd {{ NUMPY_BUILD_DIR }}
     python3 setup.py build --build-lib fftw --fcompiler=gnu95
+  environment:
+    LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas'
   when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no'
   register: numpy_fftw_log
 
@@ -47,6 +49,8 @@
   shell: |
     cd {{ NUMPY_BUILD_DIR }}
     python3 setup.py build --build-lib openblas --fcompiler=gnu95
+  environment:
+    LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas'
   when: USE_FFTW == 'no' and USE_OPENBLAS == 'yes'
   register: numpy_openblas_log
 
